--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=jhojanmm
+sonar.projectKey=sonar.python.coverage.reportPaths
 sonar.projectName=crud-students
 sonar.projectVersion=1.0
 
