--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,4 @@ sonar.projectName=crud-students
 sonar.projectVersion=1.0
 
 
-sonar.coverageReportPaths=coverage.py
+sonar.coverageReportPaths=coverage.xml
