--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,4 @@
-sonar.projectKey=sonar.python.coverage.reportPaths
-sonar.projectName=crud-students
-sonar.projectVersion=1.0
-
-
-sonar.coverageReportPaths=coverage.xml
+sonar.projectKey=Jhojanmm_crud-students
+sonar.organization=jhojanmm
+ 
+sonar.python.coverage.reportPaths=coverage.xml
