--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=Jhojanmm_crud-students
-sonar.organization=jhojanmm
+sonar.organization=Jhojanmm
  
 sonar.python.coverage.reportPaths=coverage.xml
