--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=Jhojanmm_crud-students
 sonar.organization=jhojanmm
- 
+sonar.python.version=3.10.10
 sonar.python.coverage.reportPaths=coverage.xml
