--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,16 @@
 sonar.projectKey=Jhojanmm_crud-students
 sonar.organization=jhojanmm
-sonar.python.version=3.10.10
+sonar.projectVersion=1.0
+
+## Coverage report path
 sonar.python.coverage.reportPaths=coverage.xml
+
+# Source encoding
+sonar.sourceEncoding=UTF-8
+
+# Path to resources
+sonar.sources=app/
+sonar.exclusions=tests/
+
+# Path to tests
+sonar.tests=tests/
